--- a/passportlogin/package.json
+++ b/passportlogin/package.json
@@ -12,6 +12,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.7"
   }
 }
